force-app/main/default/objects/Budget_Line__c/Budget_Line__c.object-meta.xml
<CustomObject>
    <description>Individual budget allocation line linked to an Advertising Opportunity. Tracks planned vs actual amounts by channel, vehicle, and month. Traffic coordinators use the Traffic Copy Entry quick action to add spot-level details for transmission to the traffic system.</description>
    <label>Budget Line</label>
    <nameField>
        <displayFormat>BL-{000000}</displayFormat>
        <label>Budget Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>