force-app/main/default/objects/Budget_Line__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Advertiser Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Budget Lines</relationshipLabel>
    <relationshipName>Budget_Lines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>