force-app/main/default/objects/Budget_Line__c/fields/Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount__c</fullName>
    <description>Actual spend ingested from Wide Orbit. Updated by the ingestion batch process.</description>
    <label>Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>