force-app/main/default/objects/Budget_Line__c/fields/Advertising_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advertising Opportunity</label>
    <referenceTo>Advertising_Opportunity__c</referenceTo>
    <relationshipLabel>Budget Lines</relationshipLabel>
    <relationshipName>Budget_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>