force-app/main/default/objects/Budget_Line__c/fields/Broadcast_Date__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Date__c</fullName>
    <label>Broadcast Date</label>
    <type>Date</type>
</CustomField>