force-app/main/default/objects/Budget_Line__c/fields/Copy_Code__c.field-meta.xml
<CustomField>
    <fullName>Copy_Code__c</fullName>
    <description>Creative/copy identifier in the traffic system. Tells the traffic system which ad creative runs for this spot. Maps to the isci or ad-id code in WideOrbit and similar systems.</description>
    <label>Copy Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>