force-app/main/default/objects/Budget_Line__c/fields/Copy_Rotation__c.field-meta.xml
<CustomField>
    <fullName>Copy_Rotation__c</fullName>
    <helpText>How copy rotates across spots. Examples: 100, 50/50, 33/33/34.</helpText>
    <label>Copy Rotation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>