force-app/main/default/objects/Budget_Line__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>January</fullName><default>false</default><label>January</label></value>
            <value><fullName>February</fullName><default>false</default><label>February</label></value>
            <value><fullName>March</fullName><default>false</default><label>March</label></value>
            <value><fullName>April</fullName><default>false</default><label>April</label></value>
            <value><fullName>May</fullName><default>false</default><label>May</label></value>
            <value><fullName>June</fullName><default>false</default><label>June</label></value>
            <value><fullName>July</fullName><default>false</default><label>July</label></value>
            <value><fullName>August</fullName><default>false</default><label>August</label></value>
            <value><fullName>September</fullName><default>false</default><label>September</label></value>
            <value><fullName>October</fullName><default>false</default><label>October</label></value>
            <value><fullName>November</fullName><default>false</default><label>November</label></value>
            <value><fullName>December</fullName><default>false</default><label>December</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>