force-app/main/default/objects/Budget_Line__c/fields/Spot_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Spot_Instructions__c</fullName>
    <description>Free-text instructions for the traffic coordinator, such as positioning requirements, competitive separation notes, or special scheduling constraints. Included verbatim in the traffic order payload.</description>
    <label>Spot Instructions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>