force-app/main/default/objects/Budget_Line__c/fields/Spot_Length__c.field-meta.xml
<CustomField>
    <fullName>Spot_Length__c</fullName>
    <label>Spot Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>:10</fullName><default>false</default><label>:10</label></value>
            <value><fullName>:15</fullName><default>false</default><label>:15</label></value>
            <value><fullName>:30</fullName><default>true</default><label>:30</label></value>
            <value><fullName>:45</fullName><default>false</default><label>:45</label></value>
            <value><fullName>:60</fullName><default>false</default><label>:60</label></value>
            <value><fullName>:90</fullName><default>false</default><label>:90</label></value>
            <value><fullName>:120</fullName><default>false</default><label>:120</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>