force-app/main/default/objects/Budget_Line__c/fields/Spot_Rate__c.field-meta.xml
<CustomField>
    <fullName>Spot_Rate__c</fullName>
    <label>Spot Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>