force-app/main/default/objects/Budget_Line__c/fields/Traffic_Status__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Status__c</fullName>
    <label>Traffic Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Confirmed</fullName><default>false</default><label>Confirmed</label></value>
            <value><fullName>Error</fullName><default>false</default><label>Error</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>