force-app/main/default/objects/Budget_Line__c/fields/Variance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Variance_Amount__c</fullName>
    <description>Actual_Amount__c minus Planned_Amount__c. Positive = over-delivery, negative = under-delivery.</description>
    <formula>Actual_Amount__c - Planned_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>