force-app/main/default/objects/Budget_Line__c/fields/Variance_Status__c.field-meta.xml
<CustomField>
    <fullName>Variance_Status__c</fullName>
    <label>Variance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>On Track</fullName><default>false</default><label>On Track</label></value>
            <value><fullName>Over Budget</fullName><default>false</default><label>Over Budget</label></value>
            <value><fullName>Under Budget</fullName><default>false</default><label>Under Budget</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>