force-app/main/default/objects/Budget_Line__c/fields/Weekly_Spots__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Spots__c</fullName>
    <description>Number of times this spot should air per week during the flight. Used by the traffic system to schedule the correct number of airings.</description>
    <label>Weekly Spots</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>